# littlelang

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
littlelang/: __init__.py  interpreter.py  lil.py  little.py  parser.py  std.py  types.py
tests/: test_lil.py  test_little.py
